投稿機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,12 @@
     <header class="header">
       <div class="dropdown">
         <div class="dropdown-content">
-          <a href="#">プロフィール</a>
+          <%= link_to '投稿', articles_path %>
+          <% if current_page?(show_path)%>
+            <%= link_to 'ホーム', root_path %>
+          <% else current_page?(root_path) %>
+            <%= link_to 'プロフィール', show_path %>
+          <% end %>
           <% if user_signed_in? %>
             <%= link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' } %>
           <% else %>
