--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+a {
+    text-decoration: none;
+    width: 50px;
+}
+
+.headerBtn {
+    color: blue;
+}
+
+.card_title {
+    color: green;
+}
