--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,20 @@
 <h1><%= @title %></h1>
+<div class="container">
+  <div class="tabs">
+    <div class="tabs_item active">
+      新着記事一覧
+    </div>
+    <div class="tabs_item">
+      タイムライン
+    </div>
+  </div>
+  <% @articles.each do |article| %>
+    <%= link_to article_path(id: article.id) do %>
+      <div class="card_content">
+          <div class="card_title">
+            <%= article.title %>
+          </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
