--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,16 @@
     <header class="header">
       <div class="dropdown">
         <div class="dropdown-content">
-          <%= link_to '投稿', articles_path %>
-          <% if current_page?(show_path)%>
-            <%= link_to 'ホーム', root_path %>
+          <%= link_to '投稿', articles_path, class: 'headerBtn' %>
+          <% if current_page?(main_path)%>
+            <%= link_to 'ホーム', root_path, class: 'headerBtn' %>
           <% else current_page?(root_path) %>
-            <%= link_to 'プロフィール', show_path %>
+            <%= link_to 'プロフィール', main_path, class: 'headerBtn' %>
           <% end %>
           <% if user_signed_in? %>
             <%= link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' } %>
           <% else %>
-            <%= link_to 'ログイン', new_user_session_path, class: 'header_loginBtn' %>
+            <%= link_to 'ログイン', new_user_session_path, class: 'headerBtn' %>
           <% end %>
         </div>
       </div>
