--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,9 @@
+<div class="article_detail_actions">
+    <div class="dropdown">
+    <div class="dropdown-content mini">
+        <%= link_to '編集する', edit_article_path(@article) %>
+    </div>
+    </div>
+</div>
 <%= @article.title %>
 <%= @article.content %>
