--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,11 @@
     <div class="dropdown">
     <div class="dropdown-content mini">
         <%= link_to '編集する', edit_article_path(@article) %>
+        <%= link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除してもよろしいですか？' } %>
+        </div>
+      </div>
+    </div>
+
     </div>
     </div>
 </div>
