リファクタリング

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,7 @@
       <div class="card_content">
           <div class="card_title">
             <%= article.title %>
+            <p><%= article.display_created_at %></p>
           </div>
       </div>
     <% end %>
