--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="tabs">
     <div class="tabs_item active">
-      新着記事一覧
+      つぶやき一覧
     </div>
     <div class="tabs_item">
       タイムライン
