--- a/app/views/commons/_article.html.haml
+++ b/app/views/commons/_article.html.haml
@@ -6,6 +6,7 @@
         = article.title
       .card_heart
         = image_tag 'heart.svg'
+        %span= article.like_count
       .card_detail
         = image_tag current_user.avatar_image
         %div
