--- a/app/views/commons/_article.html.haml
+++ b/app/views/commons/_article.html.haml
@@ -10,7 +10,7 @@
         = image_tag 'heart.svg'
         %span= article.like_count
       .card_detail
-        = image_tag current_user.avatar_image
+        = image_tag article.user.avatar_image
         %div
           %p= article.author_name
           %p= article.display_created_at
