--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@
 @import 'common';
 @import 'profile';
 @import 'footer';
+@import 'actiontext';
+@import 'trix/dist/trix.css';
 
 html {
   word-spacing: 1px;
