--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,4 +1,4 @@
-.article
+.article#article-show{data: {article_id: @article.id}}
   - if @article.eyecatch.attached?
     .article_image
       = image_tag @article.eyecatch
@@ -18,14 +18,11 @@
             = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除してもよろしいですか？' }
   .article_content
     = @article.content
-    - if current_user.has_liked?(@article)
-      .article_heart
-        = link_to article_like_path(@article), data: { method: 'delete' } do
-          = image_tag 'heart-active.svg'
-    - else
-      .article_heart
-        = link_to article_like_path(@article), data: { method: 'post' } do
-          = image_tag 'heart.svg'
+  - if user_signed_in?
+    .article_heart.hidden.active-heart
+      = image_tag 'heart-active.svg'
+    .article_heart.hidden.inactive-heart
+      = image_tag 'heart.svg'
 
 .article
   %h2 コメント一覧
